// Ref. https://github.com/caikit/caikit/blob/main/caikit/interfaces/nlp/data_model/text.py
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

 syntax = "proto3";
 package caikit_data_model.nlp;



 /*-- ENUMS -------------------------------------------------------------------*/

 enum FinishReason {
   NOT_FINISHED = 0;
   MAX_TOKENS = 1;
   EOS_TOKEN = 2;
   CANCELLED = 3;
   TIME_LIMIT = 4;
   STOP_SEQUENCE = 5;
   TOKEN_LIMIT = 6;
   ERROR = 7;
 }

 enum InputWarningReason {
   UNSUITABLE_INPUT = 0;
 }

 /*-- MESSAGES ----------------------------------------------------------------*/

  message ChunkerTokenizationStreamResult {

    /*-- fields --*/
    repeated caikit_data_model.nlp.Token results = 1;
    int64 token_count = 4;
    int64 processed_index = 2;
    int64 start_index = 3;
    int64 input_start_index = 20;
    int64 input_end_index = 21;
  }

 message GeneratedTextResult {

   /*-- fields --*/
   string generated_text = 1;
   int64 generated_tokens = 2;
   caikit_data_model.nlp.FinishReason finish_reason = 3;
   int64 input_token_count = 5;
   uint64 seed = 6;
   repeated caikit_data_model.nlp.GeneratedToken tokens = 7;
   repeated caikit_data_model.nlp.GeneratedToken input_tokens = 8;
 }

 message GeneratedTextStreamResult {

   /*-- fields --*/
   string generated_text = 1;
   repeated caikit_data_model.nlp.GeneratedToken tokens = 2;
   caikit_data_model.nlp.TokenStreamDetails details = 3;
   repeated caikit_data_model.nlp.GeneratedToken input_tokens = 5;
 }

 message GeneratedToken {

   /*-- fields --*/
   string text = 1;
   double logprob = 3;
   int64 rank = 4;
 }

 message InputWarning {

   /*-- fields --*/
   caikit_data_model.nlp.InputWarningReason id = 1;
   string message = 2;
 }

 message TextGenTokenClassificationResults {

  /*-- fields --*/
  repeated caikit_data_model.nlp.TokenClassificationResult input = 10;
  repeated caikit_data_model.nlp.TokenClassificationResult output = 20;
}

message TokenClassificationResult {

  /*-- fields --*/
  int64 start = 1;
  int64 end = 2;
  string word = 3;
  string entity = 4;
  string entity_group = 5;
  double score = 6;
  int64 token_count = 7;
}

message TokenClassificationResults {

  /*-- fields --*/
  repeated caikit_data_model.nlp.TokenClassificationResult results = 1;
}

 message Token {

   /*-- fields --*/
   int64 start = 1;
   int64 end = 2;
   string text = 3;
 }

 message TokenStreamDetails {

   /*-- fields --*/
   caikit_data_model.nlp.FinishReason finish_reason = 1;
   uint32 generated_tokens = 2;
   uint64 seed = 3;
   int64 input_token_count = 4;
 }

 message TokenizationResults {

   /*-- fields --*/
   repeated caikit_data_model.nlp.Token results = 1;
   int64 token_count = 4;
 }

 message TokenizationStreamResult {

   /*-- fields --*/
   repeated caikit_data_model.nlp.Token results = 1;
   int64 token_count = 4;
   int64 processed_index = 2;
   int64 start_index = 3;
 }
